# limit-model-spending

./: README.md  pyproject.toml
capit/: __init__.py  server.py
capit/agents/: README.md  base.py  claude.py  cursor.py  hermes.py  openclaw.py  opencode.py  windsurf.py
capit/templates/: index.html
tests/: test_agents.py
