[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "capit"
version = "0.8.2"
description = "Issue authentication keys with spending caps"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "capit contributors"}
]
keywords = ["api", "keys", "authentication", "spending-limits", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.0.0",
    "requests>=2.28.0",
    "flask>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
capit = "capit:cli"

[project.urls]
Homepage = "https://github.com/capit/capit"
Repository = "https://github.com/capit/capit"

[tool.setuptools.packages.find]
where = ["."]
include = ["capit", "capit.*"]

[tool.setuptools.package-data]
capit = ["templates/*.html", "static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
